fix orientation ios issue v7

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -330,7 +330,7 @@ html {
         position: relative;
         top: 0;
         left: 0;
-        width: 100vw;
+        width: 100%;
         min-height: 100vh;
         @media (orientation: landscape) {
           @media (min-width: 992px) {
@@ -628,8 +628,8 @@ html {
   @include dark-color();
   @include keyframes(hidePanel) {
     0% {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       min-width: 330px;
       min-height: 415px;
     }
@@ -653,8 +653,8 @@ html {
       min-height: 0;
     }
     100% {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       min-width: 330px;
       min-height: 415px;
     }
